Name:                battleship
Version:             0.0
Synopsis:            Generalized binary search
Description:         An implementation of Anthony's battleship algorithm
                     for function maximization
License:             MIT
License-file:        LICENSE
Author:              Thomas Levine
Maintainer:          Thomas Levine <occurrence@thomaslevine.com>
Build-Depends:       base, heap
Build-type:          Simple

Executable:          battleship
Main-is:             Battleship.hs

Test-Suite test
  type:       detailed-1.0
  test-module: Test
  build-depends: base, Cabal >= 1.9.2
